# translator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  codeql.yml  release-tag.yml
backend/: Dockerfile  main.py  pyproject.toml  translator.py
docker/: Dockerfile.backend  Dockerfile.frontend  compose.override.yaml  compose.yaml
docs/superpowers/plans/: 2026-06-19-react-spa-migration-01-foundation-and-ui.md  2026-06-19-react-spa-migration-02-teardown-and-docs.md
docs/superpowers/specs/: 2026-06-19-streamlit-to-react-spa-migration-design.md
frontend/: Dockerfile  app.py  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/nginx/: default.conf  security-headers.conf
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  queryClient.ts  translator.test.ts  translator.ts  types.ts
frontend/src/components/: DetectedLanguageBanner.tsx  FileTextInput.tsx  LanguageSelect.test.tsx  LanguageSelect.tsx  OutputField.test.tsx  OutputField.tsx  TranslatePanel.test.tsx  TranslatePanel.tsx  VersionBadge.test.tsx  VersionBadge.tsx
frontend/src/hooks/: useLanguages.ts  useTranslate.ts
frontend/src/lib/: cn.ts
frontend/src/styles/: globals.css
make/: common.mk
scripts/: bundle-lib.sh  bundle_images.sh
tests/: __init__.py  conftest.py  test_api.py  test_engine.py  test_metrics.py  test_version.py
translator/: __init__.py  app.py  engine.py  language_map.json  log_cfg.py  main.py
