[project]
name = "translator"
version = "0.1.0"
description = "Simple translation tool."
authors = [
  { name = "nos-tromo" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
dependencies = [
    "dotenv>=0.9.9",
    "emoji-country-flag>=2.1.0",
    "fastapi>=0.136.1",
    "langcodes[data]>=3.5.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openai>=2.37.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "types-requests>=2.33.0.20260513",
    "uvicorn>=0.47.0",
]

[project.urls]
Repository = "https://github.com/nos-tromo/translator.git"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
frontend = [
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.sources]
translator = { workspace = true }
