[project]
name = "translator"
version = "0.1.0"
description = "Simple translation tool."
authors = [
  { name = "nos-tromo" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
dependencies = [
    "dotenv>=0.9.9",
    "emoji-country-flag>=2.1.0",
    "fastapi>=0.136.3",
    "langcodes[data]>=3.5.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "types-requests>=2.33.0.20260518",
    "uvicorn>=0.48.0",
]

[project.urls]
Repository = "https://github.com/nos-tromo/translator.git"

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff==0.15.14",
]
frontend = [
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (translator floors at py311). Drift fails CI.
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Mirrors nos-tromo/.github/configs/python-strict/mypy.ini. Drift fails CI.
strict = true
ignore_missing_imports = true
no_incremental = true

[tool.uv]
package = true

[tool.uv.sources]
translator = { workspace = true }
