[project]
name = "translator"
version = "1.0.1"
description = "Simple translation tool."
authors = [
  { name = "nos-tromo" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
dependencies = [
    "dotenv>=0.9.9",
    "emoji-country-flag>=2.1.0",
    "fastapi>=0.139.0",
    "langcodes[data]>=3.5.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openai>=2.44.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "uvicorn>=0.50.0",
]

[project.urls]
Repository = "https://github.com/nos-tromo/translator.git"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly==1.1.1",
    "pytest>=9.1.1",
    "ruff==0.15.14",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (translator floors at py311). Drift fails CI.
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly]
# Mirrors nos-tromo/.github/configs/python-strict/pyrefly.toml. Drift fails CI.
preset = "strict"
ignore-missing-imports = ["*"]

[tool.uv]
package = true

[tool.uv.sources]
translator = { workspace = true }
